[package]
name = "lndlite"
version = "0.1.0"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "Access the Lightning Network Daemon (LND) REST API using hyper."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/lndlite"
keywords = ["lnd", "rest", "api", "lightning", "bitcoin"]

[dependencies]
base64 = { version = "0.22", default-features = false, optional = true, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-openssl = { version = "0.10", default-features = false, features = ["client-legacy"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1"] }
openssl = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
utf8-read = { version = "0.4", default-features = false }

[dev-dependencies]
rand = "0.4"
sha2 = "0.10.8"
tempdir = "0.3.7"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "test-util"] }

[features]
default = ["base64"]
base64 = ["dep:base64"]
